@@ -1240,6 +1240,8 @@ enum
     WATER_COASTER_BOAT = 99,
     WATER_COASTER_INVISIBLE = 101,
     RIVER_RAFT = 103,
+    MINIATURE_RAILWAY_AMERICAN_TENDER = 104,
+    MINIATURE_RAILWAY_AMERICAN_LOCOMOTIVE = 105,
 };
 
 enum
